syntax = "proto3";

package api.finance.v1;
import "google/api/annotations.proto";
option go_package = "/api/finance/v1;v1";
option java_multiple_files = true;
option java_package = "api.finance.v1";

service Balance {
	rpc AddBatchBalanceDetail (BalanceDetailReq) returns (BalanceDetailResp) {
		option (google.api.http) = {
			get: "balance/add/batch/detail"
		};
	}
}

message BalanceDetailReq {
	string name = 1;
}
message BalanceDetailResp {
	string message = 1;
}